test/test_suite/errors/failable_inits.c3t
// #target: x64-darwin

module test;
import std::io;
errtype Foo
{
    MY_VAL1,
    MY_VAL2,
}

struct Bar
{
    int x;
}

fn void! test1()
{
    Bar! x = Foo.MY_VAL1!;
    Bar y = x?;
}

fn void! test2()
{
    Bar! x = {};
    Bar y = x?;
}

fn void main()
{
    test1();
    test2();
}

/* #expect: test.ll

define i64 @test.test1() #0 {
entry:
  %x = alloca %Bar, align 4
  %x.f = alloca i64, align 8
  %y = alloca %Bar, align 4
  %error_var = alloca i64, align 8
  store i64 ptrtoint ([2 x i8*]* @"test.Foo$elements" to i64), i64* %x.f, align 8
  %0 = load i64, i64* %x.f, align 8
  %not_err = icmp eq i64 %0, 0
  br i1 %not_err, label %after_check, label %error

error:                                            ; preds = %entry
  store i64 %0, i64* %error_var, align 8
  br label %guard_block

after_check:                                      ; preds = %entry
  br label %noerr_block

guard_block:                                      ; preds = %error
  %1 = load i64, i64* %error_var, align 8
  ret i64 %1

noerr_block:                                      ; preds = %after_check
  %2 = bitcast %Bar* %y to i8*
  %3 = bitcast %Bar* %x to i8*
  call void @llvm.memcpy.p0i8.p0i8.i32(i8* align 4 %2, i8* align 4 %3, i32 4, i1 false)
  ret i64 0
}

define i64 @test.test2() #0 {
entry:
  %x = alloca %Bar, align 4
  %x.f = alloca i64, align 8
  %y = alloca %Bar, align 4
  %error_var = alloca i64, align 8
  %0 = bitcast %Bar* %x to i32*
  store i32 0, i32* %0, align 4
  store i64 0, i64* %x.f, align 8
  %1 = load i64, i64* %x.f, align 8
  %not_err = icmp eq i64 %1, 0
  br i1 %not_err, label %after_check, label %error

error:                                            ; preds = %entry
  store i64 %1, i64* %error_var, align 8
  br label %guard_block

after_check:                                      ; preds = %entry
  br label %noerr_block

guard_block:                                      ; preds = %error
  %2 = load i64, i64* %error_var, align 8
  ret i64 %2

noerr_block:                                      ; preds = %after_check
  %3 = bitcast %Bar* %y to i8*
  %4 = bitcast %Bar* %x to i8*
  call void @llvm.memcpy.p0i8.p0i8.i32(i8* align 4 %3, i8* align 4 %4, i32 4, i1 false)
  ret i64 0
}

; Function Attrs: nounwind
define void @test.main() #0 {
entry:
  %0 = call i64 @test.test1()
  %not_err = icmp eq i64 %0, 0
  br i1 %not_err, label %after.errcheck, label %voiderr

after.errcheck:                                   ; preds = %entry
  br label %voiderr

voiderr:                                          ; preds = %after.errcheck, %entry
  %1 = call i64 @test.test2()
  %not_err1 = icmp eq i64 %1, 0
  br i1 %not_err1, label %after.errcheck2, label %voiderr3

after.errcheck2:                                  ; preds = %voiderr
  br label %voiderr3

voiderr3:                                         ; preds = %after.errcheck2, %voiderr
  ret void
}
